# crowdsourcerer

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  MEMORY.md  Makefile  README.md  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  turbo.json
apps/api/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt  start.sh
apps/api/alembic/: env.py
apps/api/core/: api_key_rate_limit.py  audit.py  auth.py  background.py  config.py  credit_alerts.py  database.py  demo_tasks.py  email.py  encryption.py  llm_client.py  matching.py  notify.py  observability.py  quotas.py  rebasekit_health.py  refresh_tokens.py  reputation.py  result_cache.py  scopes.py  sla.py  sql.py  sweeper.py  system_alerts.py  task_types.py  url_validation.py  webhook_retry.py  webhooks.py
apps/api/models/: db.py  schemas.py
apps/api/routers/: admin.py  analytics.py  announcements.py  api_key_usage.py  applications.py  auth.py  availability.py  badges.py  certifications.py  challenges.py  comments.py  credits.py  disputes.py  endorsements.py  experiments.py  export.py  global_search.py  leaderboard.py  leagues.py  marketplace.py  notification_digest.py  notifications.py  oauth.py  onboarding.py  orgs.py  payouts.py  pipelines.py  platform_stats.py  portfolio.py  profiles.py  quality.py  quests.py  ratings.py  referrals.py  reputation.py  requester_onboarding.py  requester_templates.py  saved_searches.py  search.py  skill_quiz.py  (+15 more)
apps/api/services/: __init__.py  credit_ledger.py  pricing.py
apps/api/tests/: conftest.py  test_admin_endpoints.py  (+85 more)
(+361 files in other folders)
